--- a/controllers/lineLocate.html
+++ b/controllers/lineLocate.html
@@ -2,16 +2,16 @@
 	<meta charset="utf-8"/>
 	<html>
 	<head>
-		<script src="closestPoint.js"></script>
+		<script src="lineLocate.js"></script>
 	</head>
 		<body>
-			<h2>HTML Test - ClosestPoint</h2>
+			<h2>HTML Test - LineLocate</h2>
 			  line:<br>
 			  <input type="text" name="line" id="lineinput" value="MULTILINESTRING((-46.6489442168316 -23.547993799908,-46.6487994520019 -23.5484104003636,-46.6485236527217 -23.5491411955066,-46.6479711806748 -23.5505686599561,-46.6476899358276 -23.5513166737261,-46.6477165231346 -23.5513844236354))">
 			  <br>
 			  point:<br>
 			  <input type="text" name="point" id="pointinput" value="POINT(-46.6479711806748 -23.5505686599561)">
 			  <br><br>
-			  <input type="submit" value="Submit" onclick="closestPoint(document.getElementById('lineinput').value, document.getElementById('pointinput').value);">
+			  <input type="submit" value="Submit" onclick="lineLocate(document.getElementById('lineinput').value, document.getElementById('pointinput').value);">
 		</body>
 	</html>
