--- a/controllers/lineSubstring.html
+++ b/controllers/lineSubstring.html
@@ -10,10 +10,10 @@
 			  <input type="text" name="line" id="lineinput" value="MULTILINESTRING((-46.6489442168316 -23.547993799908,-46.6487994520019 -23.5484104003636,-46.6485236527217 -23.5491411955066,-46.6479711806748 -23.5505686599561,-46.6476899358276 -23.5513166737261,-46.6477165231346 -23.5513844236354))">
 			  <br>
 			  startfraction:<br>
-			  <input type="text" name="st" id="sfinput" value="0.2">
+			  <input type="text" name="st" id="sfinput" value="0.12167490906355913">
 			  <br>
 			  endfraction:<br>
-			  <input type="text" name="ef" id="efinput" value="0.4"> 
+			  <input type="text" name="ef" id="efinput" value="0.33716980480541225"> 
 			  <br><br>
 			  <input type="submit" value="Submit" onclick="lineSubstring(document.getElementById('lineinput').value, document.getElementById('sfinput').value, document.getElementById('efinput').value);">
 		</body>
